infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshworks-boot-samples-service
  namespace: freshworks-boot-samples
spec:
  selector:
    app: freshworks-boot-samples-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
