infra/kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: freshworks-boot-samples-vs
  namespace: freshworks-boot-samples
spec:
  hosts:
  - "*"
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /api/v1/todos
    route:
    - destination:
        port:
          number: 80
        host: freshworks-boot-samples-service.freshworks-boot-samples.svc.cluster.local
